# gogplot-rs

./: .gitignore  Cargo.toml  GROUPED_FEATURES.md  SCALE_DESIGN.md  TODO.md  test_debug.rs
examples/: README.md  automatic_legend.rs  axis_positions.rs  bar_chart.rs  bar_chart_identity.rs  boxplot.rs  boxplot_outliers.rs  categorical_scatter.rs  continuous_color.rs  cumulative_histogram.rs  dark_legend.rs  datafusion_integration.rs  debug_stacked_histogram.rs  density_plot.rs  dodged_bars.rs  dodged_histogram.rs  errorbars.rs  example_01_basic_plots.rs  fill_scales.rs  grouped_histogram.rs  histogram.rs  label_debug.rs  labels.rs  labels_advanced.rs  legends.rs  line_plot.rs  line_styles.rs  line_theme.rs  line_types.rs  line_with_points.rs  mtcars.rs  mtcars_polars.rs  point_theme.rs  polars_integration.rs  position_comparison.rs  rectangles.rs  reference_lines.rs  scatter_plot.rs  segments.rs  shapes.rs  (+15 more)
examples/gogplot/: bar_basic.yaml  basic_point.yaml  boxplot_basic.yaml  density_basic.yaml  errorbar_basic.yaml  gogplot-schema.json  gogplot.rs  histogram_basic.yaml  histogram_binwidth.yaml  hline_summary.yaml  label_basic.yaml  line_demo.yaml  rect_basic.yaml  segment_basic.yaml  smooth_basic.yaml  text_basic.yaml  vline_summary.yaml
src/: aesthetics.rs  data.rs  error.rs  guide.rs  layer.rs  lib.rs  prelude.rs  theme.rs  visuals.rs
src/aesthetics/: builder.rs  constant.rs  values.rs
src/data/: series.rs
src/geom/: bar.rs  boxplot.rs  context.rs  density.rs  errorbar.rs  histogram.rs  hline.rs  label.rs  line.rs  mod.rs  point.rs  properties.rs  rect.rs  segment.rs  smooth.rs  text.rs  (+1 more)
tests/: histogram_debug.rs  test_grouping_aesthetics.rs  test_multiple_grouping.rs  test_position_identity.rs
(+51 files in other folders)
