[package]
name = "gogplot"
version = "0.1.0"
edition = "2024"

[features]
default = []
arrow = ["dep:arrow"]
datafusion = ["arrow"]
polars = ["dep:polars"]

[dependencies]
cairo-rs = { version = "0.21.5", features = ["pdf", "png", "svg"] }
arrow = { version = "57.1.0", optional = true }
polars = { version = "0.52.0", optional = true, default-features = false, features = ["csv", "lazy"] }
ordered-float = "5.1.0"
splines = "5.0.0"
log = "0.4.29"
env_logger = "0.11.8"

[dev-dependencies]
strum = "0.27.2"
strum_macros = "0.27.2"
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.33"